fix some styles and layout issues

--- a/design-system/elements/k-alert/k-alert.scss
+++ b/design-system/elements/k-alert/k-alert.scss
@@ -1,5 +1,6 @@
 :host {
   > div {
+    font-family: 'Lato';
     display: grid;
     grid-template-columns: auto 1fr;
     gap: var(--spacing);
