--- a/design-system/styles/reset.scss
+++ b/design-system/styles/reset.scss
@@ -79,6 +79,7 @@ time,
 mark,
 audio,
 video {
+  font-family: 'Lato';
   margin: 0;
   padding: 0;
   border: 0;
